2008-04-28  Stephen Sinclair <radarsat1@gmail.com>
	* Make validation-related functions internal to liblo.
	* Add server input validation along with a function to deserialise an OSC message. (Chris Hixon)
	* Fix bad socket number in lo_client_sockets when a server is freed.

2008-04-21  Stephen Sinclair <radarsat1@gmail.com>
	* Added Daniel Lacroix's patch for level 2 broadcast support.
	* Use resolved IP address to detect broadcast address.

2008-02-25  Stephen Sinclair <radarsat1@gmail.com>
	* Fix bug where curly brackets didn't match the last item in the comma-separated list.

2008-02-20  Stephen Sinclair <radarsat1@gmail.com>
	* Added lo_bundle_free_messages() to free a bundle and the messages it points to. (Kentaro Fukuchi)

2008-01-27  Stephen Sinclair <radarsat1@gmail.com>
	* Fix for lo_message_add(), wrong argument order for lo_message_add_varargs_internal(). (Dave Robillard)
	* Added test case for lo_message_add().

2008-01-20  Stephen Sinclair  <radarsat1@gmail.com>

	* Added lo_message_add_varargs() to play well with C functions taking a variable number of arguments. (Dave Robillard)
	* Avoid unnecessary repetitive reallocation on lo_message_add_*(). (Dave Robillard)
	* Fixed errors related to 64-bit in packing blob and MIDI messages. (Dave Robillard)

2008-01-13  Stephen Sinclair  <radarsat1@gmail.com>

        * Fixed index increment in sendosc.c for string and symbol types

2008-01-12  Nicholas Humfrey  <njh@aelius.com>

	* Added tools from Kentaro Fukuchi

2007-03-19  Nicholas Humfrey  <njh@aelius.com>

	* Applied patch from Chris Hixon to check for buffer overflows

2007-03-16  Nicholas Humfrey  <njh@aelius.com>

	* Fixed several compiler warnings
	* Changed address for package bug reports
	* Released version 0.24

2007-03-09  Nicholas Humfrey  <njh@aelius.com>

	* Changed lo_blob_new() to take const void* (thanks to Lars Luthman)
	* Disable getnameinfo() method of getting hostname, when IPv6 is disabled